# Aetherlink-UI

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AB_EXPERIMENTS_GUIDE.md  ACCULYNX_INTEGRATION.md  AGENT_IMPLEMENTATION.md  AI_Agents_for_Optimization.csv  AI_OPERATIONS_BRAIN_README.md  AetherSocketBridge.js  Aetherlink_LandingPortal.html  AgentChat.tsx  AgentSync.tsx  App.tsx  AskAether.tsx  AskAether_AI_Upgrade.html  AutoGPT_Setup_Guide.txt  BETA_LAUNCH_PLAYBOOK.html  BETA_LAUNCH_PLAYBOOK.md  CANONICAL_EVENT_TYPES.md  CLEANUP_PLAN_MAIN_PY.md  COMMERCIAL_LICENSING.md  COMMERCIAL_PRESENTATION.md  COMPLETE_SUMMARY.md  CodeCreator.html  CodeCreator.tsx  CodeOracle.html  DAY2_OPS.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  ENTERPRISE_SUPPORT_PLAN.md  ExportBundle.tsx  FEDERATION_README.md  FINAL_POLISH.md  GRAFANA_SETUP_QUICK_START.md  HARDENING_CHECKLIST.md  HIGH_IMPACT_ADDONS.md  HOW_TO_LAUNCH.md  (+183 more)
.claude/: settings.local.json
.github/: dependabot.yml
alembic/: env.py  env_async.py
beta/: README.md  beta-onboard.ps1  beta-onboard.sh  demo_data_generator.py  profiles.json
config/: .env.prod.template  ai-providers.yaml
data/: acculynx_audit.json  acculynx_audit.json.20251109044009.bak  acculynx_audit.json.20251109044018.bak  acculynx_audit.json.20251109135839.bak  acculynx_audit.json.20251109135900.bak  acculynx_audit.json.20251109140145.bak  acculynx_schedules.json.20251109042845.bak  acculynx_schedules.json.20251109043500.bak  acculynx_schedules.json.20251109044009.bak  acculynx_schedules.json.20251109050109.bak  acculynx_schedules.json.20251109050713.bak  acculynx_schedules.json.20251109052331.bak  anomaly_history.jsonl  local_action_runs.json.20251109043837.bak  local_action_runs.json.20251109043923.bak  local_action_runs.json.20251109044018.bak
deploy/: aetherlink-anomaly-rules.yaml  alert.rules.yml  config.yml  docker-compose.dev.yml  docker-compose.prod.yml  manifest.json  prometheus.yml  prometheus_alerts.yml
docs/: AETHERLINK_PROTOCOLS.md  AGENT_DEPLOYMENT.md  AI_INTEGRATION_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_COMPLETE.md  CI_CD.md  COMMAND_CENTER_API_GUIDE.md  COMMAND_CENTER_OPS_RUNBOOK.md  COMMAND_CENTER_QUICKSTART.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  CONTINUOUS_MONITORING_VALIDATION.md  DEPLOYMENT.md  EVENT_CONTROL_PLANE.md  EVENT_SCHEMA_REGISTRY.md  FAILURE_PREVENTION.md  FINAL_POLISH.md  FINAL_SHIP_CHECKLIST.md  GIT_RELEASE_GUIDE.md  HARDENING_GUIDE.md  HARDENING_SUMMARY.md  INSTALL.md  INTERACTIVE_TEST_GUIDE.md  ON_CALL_RUNBOOK.md  PHASE_II_ARCHITECTURE.md  PHASE_II_DECISION_GUIDE.md  PHASE_IX_M3_M4_IMPLEMENTATION.md  PHASE_IX_PLAN.md  PHASE_IX_XI_SCHEDULER_COMPLETE.md  PHASE_VIII_M1.md  PHASE_VIII_M2.md  PHASE_VIII_M3.md  PHASE_VIII_SUMMARY.md  PHASE_XIII_COMPLETE_SUMMARY.md  PHASE_XIII_FIELD_OPS_PLATFORM.md  PHASE_XII_ROADMAP.md  PHASE_XIV_MONITORING_DASHBOARDS.md  PHASE_XIV_ROADMAP.md  PHASE_XI_VERTICAL_APPS_IMPLEMENTATION.md  PHASE_X_IMPLEMENTATION.md  PLANNING_v1.1_AetherLink.md  (+18 more)
env/: base.env  services.env
k8s/: command-center-deployment.yaml  config-and-secrets.yaml
monitoring/: ARCHITECTURE.md  Caddyfile  DEPLOY.md  DEPLOY_PRODUCTION.md  ENHANCED_FEATURES.md  HARDENING_SUMMARY.md  IMPORT_GUIDE.md  Makefile  OPTIONAL_UPGRADES.md  PRE_PROD_GO_SUMMARY.md  PRODUCTION_GO.md  PRODUCTION_HARDENED.md  PROD_READY.md  QUICKREF_CRM_EVENTS_VIZ.md  QUICKSTART.md  QUICK_DEPLOY.md  QUICK_REFERENCE.md  README.md  README_HARDENED.md  RUNBOOK_CRM_EVENTS_VISUALIZATION.md  SHIPMENT_MANIFEST.md  SHIPPED.md  aetherlink-alerts.yaml  aetherlink-anomaly-rules.yaml  aetherlink-ops-analytics.rules.yml  alert-templates.tmpl  alertmanager-commandcenter.yml  alertmanager.yml  blackbox.yml  deploy-nginx-proxy.ps1  docker-compose-health-probe.yml  docker-compose.caddy.yml  docker-compose.nginx.yml  docker-compose.prod.yml  docker-compose.traefik.yml  docker-compose.yml  flight-readiness-test.ps1  grafana-dashboard-business-kpis.json  grafana-dashboard-command-center.json  grafana-dashboard-enhanced.json  (+15 more)
observability/: README.md
scripts/: README.md  (+37 more)
(+417 files in other folders)
