[tool.poetry]
name = "aetherlink"
version = "0.1.0"
description = "AetherLink AI Service Agent"
authors = ["Jon Mikrut <jonmikrut.jm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
prometheus-client = "^0.19.0"
sentry-sdk = "^1.32.0"
structlog = "^23.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.6"
pyright = "^1.1.335"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "I",  # isort
    "N",  # naming
    "UP", # pyupgrade
    "RUF", # ruff-specific rules
    "PLR", # pylint refactor
]
ignore = [
    "N999",  # Invalid module name for customer-ops
    "B008",  # Allow Depends in FastAPI routes
]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.pyc",
]

[tool.ruff.isort]
lines-after-imports = 2

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
# Directories to exclude
(
    \.venv
    | __pycache__
)
'''
